<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserFormActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
            android:id="@+id/tv_label_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/userinput_start_space"
            android:textSize="14sp"
        />

    <EditText
            android:id="@+id/et_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/userinput_start_space"
            android:layout_marginEnd="@dimen/userinput_end_space"
            android:layout_marginTop="@dimen/userinput_bt_lb_et"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_firstName"
            android:inputType="textCapWords"
            android:background="@drawable/bg_userinput_edittext"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            android:textColorHint="@color/black_op_12"
            android:hint="@string/hint_first_name"
    />

    <TextView
            android:id="@+id/tv_label_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_firstName"
            android:layout_marginStart="@dimen/userinput_start_space"
            android:layout_marginTop="@dimen/userinput_bt_et_lb"
            android:textSize="14sp"
    />

    <EditText
            android:id="@+id/et_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/userinput_start_space"
            android:layout_marginEnd="@dimen/userinput_end_space"
            android:layout_marginTop="@dimen/userinput_bt_lb_et"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_lastName"
            android:background="@drawable/bg_userinput_edittext"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            android:inputType="textCapWords"
            android:textColorHint="@color/black_op_12"
            android:hint="@string/hint_last_name"
    />

    <TextView
            android:id="@+id/tv_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lastName"
            android:layout_marginStart="@dimen/userinput_start_space"
            android:layout_marginTop="@dimen/userinput_bt_et_lb"
            android:textSize="14sp"
    />

    <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/userinput_start_space"
            android:layout_marginEnd="@dimen/userinput_end_space"
            android:layout_marginTop="@dimen/userinput_bt_lb_et"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_email"
            android:background="@drawable/bg_userinput_edittext"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black_op_12"
            android:hint="@string/hint_email"
    />

    <TextView
            android:id="@+id/btnSubmit"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/submit"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_userinput_btn"
            android:layout_marginTop="@dimen/userinput_bt_et_btn"
            android:layout_marginStart="@dimen/userinput_start_space"
            android:layout_marginEnd="@dimen/userinput_end_space"
    />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>